--- a/book_mangement/book/templates/delete_confirmation.html
+++ b/book_mangement/book/templates/delete_confirmation.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% load crispy_forms_tags %}
+{% block title %} {% endblock title %}
 {% block content %}
 <div style='width:30%;margin: auto'>
-    <h3>Well Come to  Store Book</h3>
+    <h1>Are you sure you want to delete this?</h1>
     <form method='post'>
         {% csrf_token %}
-        {{form|crispy}}
+        {{form}}
         <button class='btn btn-success' type='submit'>Submit</button>
     </form>
 </div>
