--- a/book_mangement/book/templates/show_book.html
+++ b/book_mangement/book/templates/show_book.html
@@ -7,26 +7,26 @@
     <tr>
       <th scope="col">ID</th>
       <th scope="col">Book Name</th>
-      <th scope="col">Author</th>
+     <!-- <th scope="col">Author</th>
       <th scope="col">Category</th>
       <th scope="col">First Publish</th>
       <th scope="col">Last Publish</th>
-      <th scope="col">Action</th>
+      <th scope="col">Action</th> -->
     </tr>
   </thead>
   <tbody>
     {% for david in data %}
     <tr>
       <td scope="row">{{david.id}}</td>
-      <td scope="row">{{david.book_name}}</td>
-      <td scope="row">{{david.author}}</td>
+      <td scope="row"><a href="{% url 'details_book' david.id %}">{{david.book_name}}</a></td>
+      <!--<td scope="row">{{david.author}}</td>
       <td scope="row">{{david.category}}</td>
       <td scope="row">{{david.first_pub}}</td>
       <td scope="row">{{david.last_pub}}</td>
       <td>
-        <a href="{% url 'edit_book' id=david.id %}" class="btn btn-success btn-sm">Edit</a>
-        <a href="{% url 'delete_book' id=david.id %}" class="btn btn-danger btn-sm">Delate</a>
-      </td>
+        <a href="{% url 'edit_book' pk=david.id %}" class="btn btn-success btn-sm">Edit</a>
+        <a href="{% url 'delete_book' pk=david.id %}" class="btn btn-danger btn-sm">Delate</a>
+      </td> -->
 
     </tr>
     {% endfor %}
